crates/arf-console/tests/snapshots/resolve_tests__resolve_environment_version_reports_environment_source.snap
---
source: crates/arf-console/tests/resolve_tests.rs
expression: normalize_descriptor(&value)
---
{
  "cwd": "<cwd>",
  "diagnostics": [],
  "provider": "rig",
  "resolved": true,
  "resolver": {
    "name": "arf",
    "version": "<arf-version>"
  },
  "schema_version": 1,
  "selected_by": {
    "kind": "version_request",
    "requested_r_home": null,
    "requested_version": "4.4.2",
    "source": {
      "format": null,
      "key": null,
      "kind": "environment_variable",
      "name": "ARF_R_VERSION",
      "path": null
    }
  },
  "target": {
    "r_binary": null,
    "r_home": "<r-home>",
    "resolved_version": "4.4.2"
  }
}
