crates/arf-console/tests/snapshots/resolve_tests__resolve_found_emits_descriptor_with_target.snap
---
source: crates/arf-console/tests/resolve_tests.rs
expression: normalize_descriptor(&value)
---
{
  "cwd": "<cwd>",
  "diagnostics": [],
  "provider": "explicit_path",
  "resolved": true,
  "resolver": {
    "name": "arf",
    "version": "<arf-version>"
  },
  "schema_version": 1,
  "selected_by": {
    "kind": "r_home",
    "requested_r_home": "<requested-r-home>",
    "requested_version": null,
    "source": {
      "format": null,
      "key": null,
      "kind": "command_line_argument",
      "name": "--r-home",
      "path": null
    }
  },
  "target": {
    "r_binary": null,
    "r_home": "<r-home>",
    "resolved_version": null
  }
}
