crates/arf-console/tests/snapshots/resolve_tests__resolve_rig_alias_is_accepted_before_version_spec_validation.snap
---
source: crates/arf-console/tests/resolve_tests.rs
expression: normalize_descriptor(&value)
---
{
  "cwd": "<cwd>",
  "diagnostics": [],
  "provider": "rig",
  "resolved": true,
  "resolver": {
    "name": "arf",
    "version": "<arf-version>"
  },
  "schema_version": 1,
  "selected_by": {
    "kind": "version_request",
    "requested_r_home": null,
    "requested_version": "my-proj",
    "source": {
      "format": null,
      "key": null,
      "kind": "command_line_argument",
      "name": "--with-r-version",
      "path": null
    }
  },
  "target": {
    "r_binary": null,
    "r_home": "<r-home>",
    "resolved_version": "4.4.2"
  }
}
