crates/arf-console/tests/snapshots/resolve_tests__resolve_without_config_reports_built_in_default_source.snap
---
source: crates/arf-console/tests/resolve_tests.rs
expression: normalize_descriptor(&value)
---
{
  "cwd": "<cwd>",
  "diagnostics": [],
  "provider": "rig",
  "resolved": true,
  "resolver": {
    "name": "arf",
    "version": "<arf-version>"
  },
  "schema_version": 1,
  "selected_by": {
    "kind": "default",
    "requested_r_home": null,
    "requested_version": null,
    "source": {
      "format": null,
      "key": null,
      "kind": "built_in_default",
      "name": null,
      "path": null
    }
  },
  "target": {
    "r_binary": null,
    "r_home": "<r-home>",
    "resolved_version": "4.4.2"
  }
}
